tests/doWhile/invalid/Syntax/DO-WHILE_whileNodo.wacc
# while missing opening do

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    skip
  while false
end
